--- a/public/css/giiz.css
+++ b/public/css/giiz.css
@@ -56,13 +56,24 @@ body {
 #add { width:100px; height:30px; margin: 10px 0px; }
 
 .del { width: 28px; height: 28px;}
-.wrap { text-align: center; margin:auto; list-style: none outside none; border-bottom: 2px solid lightblue;  white-space: nowrap;  overflow: hidden; }
+.wrap { text-align: center; margin:auto; list-style: none outside none; border-bottom: 3px solid lightblue;  white-space: nowrap;  overflow: hidden; }
 
 /*
   スマホ
 */
 @media only screen and (max-width: 767px) {
   body {
+    /* 画像ファイルの指定 */
     background-image: url(../img/bg-iiz-s4.jpg);
+    /* 画像を常に天地左右の中央に配置 */
+    background-position: center center;
+    /* 画像をタイル状に繰り返し表示しない */
+    background-repeat: no-repeat;
+    /* コンテンツの高さが画像の高さより大きい時、動かないように固定 */
+    background-attachment: fixed;
+    /* 表示するコンテナの大きさに基づいて、背景画像を調整 */
+    background-size: cover;
+    /* 背景画像が読み込まれる前に表示される背景のカラー */
+    background-color: #464646;
   }
 }
